--- a/package.json
+++ b/package.json
@@ -9,14 +9,37 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@moralisweb3/common-evm-utils": "^2.14.3",
+    "@moralisweb3/next": "^2.14.3",
+    "@sanity/client": "^5.2.2",
     "@types/node": "18.14.1",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
+    "@web3auth/base": "^4.6.0",
+    "@web3auth/modal": "^4.6.2",
+    "@web3auth/web3auth-wagmi-connector": "^1.0.0",
+    "axios": "^1.3.4",
+    "chart.js": "^4.2.1",
+    "dotenv": "^16.0.3",
     "eslint": "8.34.0",
     "eslint-config-next": "13.2.1",
+    "ethers": "^5.7.2",
+    "js-file-download": "^0.4.12",
+    "moralis": "^2.14.3",
     "next": "13.2.1",
+    "next-auth": "^4.20.1",
     "react": "18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "18.2.0",
-    "typescript": "4.9.5"
+    "react-icons": "^4.7.1",
+    "typescript": "4.9.5",
+    "wagmi": "^0.11.7",
+    "web3": "^1.8.2"
+  },
+  "devDependencies": {
+    "@faker-js/faker": "^7.6.0",
+    "autoprefixer": "^10.4.13",
+    "postcss": "^8.4.21",
+    "tailwindcss": "^3.2.7"
   }
 }
