--- a/studio/package.json
+++ b/studio/package.json
@@ -15,7 +15,8 @@
     "sanity"
   ],
   "dependencies": {
-    "@sanity/client": "^5.2.2",
+    "@sanity/icons": "^2.1.0",
+    "@sanity/ui": "^1.2.0",
     "@sanity/vision": "^3.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -25,6 +26,8 @@
   },
   "devDependencies": {
     "@sanity/eslint-config-studio": "^2.0.1",
+    "@types/react": "^18.0.25",
+    "@types/styled-components": "^5.1.26",
     "eslint": "^8.6.0",
     "prettier": "^2.8.4",
     "typescript": "^4.0.0"
