--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
     "@moralisweb3/common-evm-utils": "^2.14.3",
     "@moralisweb3/next": "^2.14.3",
     "@sanity/client": "^5.2.2",
+    "@sanity/icons": "^2.1.0",
+    "@sanity/ui": "^1.2.0",
+    "@sanity/vision": "^3.0.0",
     "@types/node": "18.14.1",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
@@ -34,7 +37,9 @@
     "react-icons": "^4.7.1",
     "typescript": "4.9.5",
     "wagmi": "^0.11.7",
-    "web3": "^1.8.2"
+    "web3": "^1.8.2",
+    "sanity": "^3.0.0",
+    "styled-components": "^5.2.0"
   },
   "devDependencies": {
     "@faker-js/faker": "^7.6.0",
